feat: add logic for spring-ingestion service
